# MosaiQ-Lindhard

./: .clangd  .gitignore  LICENSE  README.md  compile_flags.txt  cspell.json  requirements.txt
docs/: BEREZINIAN_ARCHITECTURE.md  README.md  release_notes_v2.md  simulator_architecture.md  theory.md  usage.md  zeta_rpa_integration.md
docs/legacy_extraction/: FermionComponent.cpp  FermionComponent.h  Plasma.cpp  Plasma.h  Potential.cpp  Potential.h  TemperatureFermionComponent.cpp  TemperatureFermionComponent.h  dielectric.cpp  getLindhard.cpp  print_chiRPA.cpp
manuscript/: cover-letter.tex  two-fermi.bib  two-fermi.tex
script/: plot_Sqw.py
scripts/: package_aps_submission.sh  plot_Sq_gamma.py  plot_Sqw.py  plot_common.py  plot_lindhard_base.py  plot_lindhard_t0_2d.py  plot_pathway_ab_dispersion.py  plot_plasmon_dispersion.py  plot_t0_error.py  plot_thermal_anatomy.py  plot_zeta_rpa_compare.py  plot_zeta_rpa_dispersion.py  plot_zeta_rpa_strong_coupling.py  regenerate_figures_3_4.sh  regenerate_sq_gamma.sh  sweep_lindhard_rs_t.py  sync_manuscript_figures.py
simulator/: CMakeLists.txt
simulator/src/: compile_flags.txt  main.cpp
simulator/src/core/: BrentRootFinder.hpp  ComplexPolylogarithm.cpp  ComplexPolylogarithm.hpp  Concepts.hpp  FermiDirac.cpp  FermiDirac.hpp  LinalgUtils.hpp  RiemannZetaBorwein.cpp  RiemannZetaBorwein.hpp  RootFinder.hpp  SincQuadrature.cpp  SincQuadrature.hpp  SuperMatrix.hpp  TrapezoidalIntegration.hpp  compile_flags.txt  linalg_utils.hpp
simulator/src/engine/: Berezinian.hpp  Lindhard.cpp  Lindhard.hpp  PlasmonPoleExtractor.cpp  PlasmonPoleExtractor.hpp  PolyLogRPA.cpp  PolyLogRPA.hpp  RPA.cpp  RPA.hpp  StructureFactor.cpp  StructureFactor.hpp  ZetaRPA.cpp  ZetaRPA.hpp  berezinian.hpp  compile_flags.txt
simulator/src/physics/: ChemicalPotential.hpp  Constants.hpp
simulator/tests/: CMakeLists.txt  compile_flags.txt  sweep_lindhard_rs_t.cpp  test_berezinian.cpp  test_complex_polylogarithm.cpp  test_fermi_dirac.cpp  test_lindhard.cpp  test_plasmon_pole_extractor.cpp  test_polylog_rpa.cpp  test_riemann_zeta_borwein.cpp  test_rpa.cpp  test_sinc_quadrature.cpp  test_sum_rules.cpp  test_t0_limit.cpp  test_zeta_rpa.cpp  test_zeta_rpa_dielectric.cpp  verify_zeta_rpa_scalar.cpp
